# Healthkey

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  READ ME  healthkey.json  idl.json  package-lock.json  package.json
healthkey-frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
healthkey-frontend/src/: App.tsx  main.tsx
healthkey-frontend/src/idl/: healthkey_protocol.json
healthkey-frontend/src/lib/: data.ts
healthkey-frontend/src/providers/: WalletProvider.tsx
healthkey-frontend/src/utils/: program.ts
programs/healthkey_protocol/: Cargo.toml
programs/healthkey_protocol/src/: lib.rs
scripts/: reward.js  reward.ts
server/: .gitignore  index.ts  package-lock.json  package.json  tsconfig.json
tests/: healthkey_protocol.js
