[package]
name = "healthkey_protocol"
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "healthkey_protocol"

[features]
# nothing on by default for BPF builds
default = []
# only used when you explicitly want to include external crate types in the IDL
idl-build = ["anchor-spl/idl-build"]

[dependencies]
# enable init_if_needed so you can use #[account(init_if_needed, ...)]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# correct feature names for this version
anchor-spl  = { version = "0.31.1", features = ["token", "associated_token"] }
